--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-facebook-login": "^4.1.1",
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
@@ -42,7 +43,6 @@
     "web-vitals": "^3.5.1",
     "yup": "^1.3.3"
   },
-  
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
