--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@testing-library/jest-dom": "^6.1.6",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
+    "axios": "^1.6.5",
     "chart.js": "^4.4.1",
     "formik": "^2.4.5",
     "react": "^18.2.0",
